--- a/src/app/home/home-layout/home-layout.component.html
+++ b/src/app/home/home-layout/home-layout.component.html
@@ -21,7 +21,7 @@
   </mat-toolbar>
 
   <mat-menu #menu="matMenu" class="mt-5">
-      <button type="button" class="relative inline-flex items-center w-full px-4 py-2 text-sm font-medium border-b border-gray-200 hover:bg-gray-100 hover:text-blue-900 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 -mt-2">
+      <button type="button" routerLink="/home/profile" class="relative inline-flex items-center w-full px-4 py-2 text-sm font-medium border-b border-gray-200 hover:bg-gray-100 hover:text-blue-900 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 -mt-2">
         <mat-icon>account_circle</mat-icon>
         <span class="ml-2">Perfil</span>
           
