--- a/src/app/shared/pages/sidebar/sidebar.component.html
+++ b/src/app/shared/pages/sidebar/sidebar.component.html
@@ -1,9 +1,12 @@
 <div class="w-55 bg-blue-950 text-white -mt-12">
   <nav class="mt-10">
     <div *ngFor="let option of menuOptions" class="flex flex-col">
-      <a (click)="toggleExpand(option)" class="mx-4 my-2 hover:bg-gray-700 p-2 rounded cursor-pointer" [routerLink]="option.route">
-        <mat-icon>{{ option.icon }}</mat-icon>
-        {{ option.name }}
+      <a (click)="toggleExpand(option); $event.preventDefault()" class="flex justify-between items-center mx-4 my-2 hover:bg-blue-900 p-2 rounded cursor-pointer" [routerLink]="option.subOptions.length > 0 ? null : option.route">
+        <div class="flex items-center">
+          <mat-icon class="mr-2">{{ option.icon }}</mat-icon>
+          {{ option.name }}
+        </div>
+        <mat-icon *ngIf="option.subOptions.length > 0" class="text-right">keyboard_arrow_down</mat-icon>
       </a>
       <div *ngFor="let subOption of option.subOptions" [ngClass]="{ hidden: !option.expanded }"
         class="ml-6 my-1 hover:bg-gray-700 p-2 rounded">
