--- a/src/app/home/pages/profile/profile.component.html
+++ b/src/app/home/pages/profile/profile.component.html
@@ -78,6 +78,13 @@
                 </span>
               </div>
             </div>
+            <div class="sm:col-span-3">
+              <label for="photo" class="block text-sm font-medium leading-6 text-gray-900">Foto</label>
+              <div class="mt-2">
+                <input type="file" id="photo" (change)="onFileChange($event)" accept="image/*"
+                  class="block w-full text-gray-900">
+              </div>
+            </div>
           </div>
 
           <div class="mt-6 flex items-center justify-end gap-x-6 pb-7">
@@ -93,5 +100,4 @@
       </form>
     </div>
   </div>
-  <div></div>
 </div>
