--- a/src/app/home/components/change-password/change-password.component.html
+++ b/src/app/home/components/change-password/change-password.component.html
@@ -1,4 +1,17 @@
-<form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
+
+<div class="col-span-3">
+  <span class="text-xl">Seguridad de la Cuenta</span>
+  <mat-divider></mat-divider>
+  <div class="mt-7">
+    <span class="mr-5">Contraseña</span>
+    <button type="button" (click)="edit()"
+    class="rounded-md bg-blue-900 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+    Cambiar contraseña
+  </button>
+  </div>
+</div>
+<div *ngIf="!isDisabled">
+  <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
     <div class="mt-5 grid grid-cols-1 gap-x-4 gap-y-6 sm:grid-cols-3">
       <div class="sm:col-span-1">
         <label for="olPassword" class="block text-sm font-medium leading-6 text-gray-900">Contraseña Actual</label>
@@ -37,3 +50,4 @@
       </div>
     </div>
   </form>
+</div>
