--- a/src/app/academic-resources/components/resources-table/resources-table.component.html
+++ b/src/app/academic-resources/components/resources-table/resources-table.component.html
@@ -1,32 +1,50 @@
 <div class="flex flex-col" *ngIf="data.length > 0; else noData">
-    <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-      <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-          <table class="min-w-full divide-y divide-gray-200">
-            <thead>
-              <tr>
-                <!-- Aquí van tus encabezados de tabla -->
-              </tr>
-            </thead>
-            <tbody class="bg-white divide-y divide-gray-200">
-              <tr *ngFor="let item of data">
-                <!-- Aquí van tus filas de tabla -->
-              </tr>
-            </tbody>
-          </table>
-        </div>
+  <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+        <table class="min-w-full divide-y divide-gray-200">
+          <thead>
+            <tr>
+              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">ID
+                Recurso</th>
+              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Nombre Recurso</th>
+              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Asignatura</th>
+              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Nivel</th>
+              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Fecha Creación</th>
+              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tipo
+                Recurso</th>
+              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Usuario Creación</th>
+            </tr>
+          </thead>
+          <tbody class="bg-white divide-y divide-gray-200">
+            <tr *ngFor="let item of paginatedData">
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.idRecurso }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.nombreRecurso }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.asignatura }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.nivel }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.fechaCreacion | date }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.tipoRecurso }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.usuarioCreacion }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-
-    <div class="flex items-center justify-between p-8">
-        <button (click)="prevPage()" [disabled]="currentPage === 1" class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Anterior</button>
-        <button (click)="nextPage()" [disabled]="currentPage === totalPages" class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Siguiente</button>
-      </div>
   </div>
-  
-  
-  
-  <ng-template #noData>
-    <div class="text-center text-xl">No hay datos disponibles.</div>
-  </ng-template>
-  
+
+  <div class="flex items-center justify-between p-8">
+    <button (click)="prevPage()" [disabled]="currentPage === 1"
+      class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Anterior</button>
+    <button (click)="nextPage()" [disabled]="currentPage === totalPages"
+      class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Siguiente</button>
+  </div>
+</div>
+
+<ng-template #noData>
+  <div class="text-center text-xl">No hay datos disponibles.</div>
+</ng-template>
