--- a/src/app/academic-resources/components/add-resource/add-resource.component.html
+++ b/src/app/academic-resources/components/add-resource/add-resource.component.html
@@ -1,11 +1,14 @@
 <mat-dialog-content>
+    <div class="text-right">
+        <mat-icon mat-dialog-close class="text-gray-700">close</mat-icon>
+    </div>
     <p class="text-2xl text-black">Agregar Recurso</p>
     <hr>
      <form [formGroup]="recursoGroupForm" (ngSubmit)="onSubmit()">
         <div class="grid grid-cols-4 gap-4 mt-5 -mb-7">
             <div>
                 <label for="nivel" class="block text-sm font-medium leading-6 text-gray-900">Nivel</label>
-                <select id="niveles" formControlName="nivel"
+                <select id="niveles" formControlName="idNivel"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     (change)="onNivelChange($event)">
                     <option *ngFor="let nivel of nivelesType" value="{{nivel.value}}">
@@ -16,10 +19,10 @@
 
             <div class="col-span-2">
                 <label for="asignatura" class="block text-sm font-medium leading-6 text-gray-900">Asignatura</label>
-                <select id="asignaturas" formControlName="asignatura" 
+                <select id="asignaturas" formControlName="idAsignatura" 
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option *ngFor="let asignatur of asignaturas" value="{{asignatur.value}}">
-                        {{ asignatur.label }}
+                    <option *ngFor="let asignatura of asignaturas" value="{{asignatura.value}}">
+                        {{ asignatura.label }}
                     </option>
                 </select>
             </div>
@@ -84,13 +87,13 @@
               </div>
 
             <div class="col-span-4 text-right">
-                <button type="button"
+                <button type="button" (click)="cancelar()"
                     class="text-white bg-gray-500 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
                     <span class="flex items-center justify-center">
                         Cancelar
                     </span>
                 </button>
-                <button type="submit"
+                <button type="submit" (click)="pruebabtn()"
                     class="text-white bg-blue-900 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
                     <span class="flex items-center justify-center">
                         Guardar
