--- a/src/app/academic-resources/components/add-resource/add-resource.component.html
+++ b/src/app/academic-resources/components/add-resource/add-resource.component.html
@@ -4,7 +4,7 @@
     </div>
     <p class="text-2xl text-black">Agregar Recurso</p>
     <hr>
-     <form [formGroup]="recursoGroupForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="recursoGroupForm" (ngSubmit)="onSubmit()">
         <div class="grid grid-cols-4 gap-4 mt-5 -mb-7">
             <div>
                 <label for="nivel" class="block text-sm font-medium leading-6 text-gray-900">Nivel</label>
@@ -19,7 +19,7 @@
 
             <div class="col-span-2">
                 <label for="asignatura" class="block text-sm font-medium leading-6 text-gray-900">Asignatura</label>
-                <select id="asignaturas" formControlName="idAsignatura" 
+                <select id="asignaturas" formControlName="idAsignatura"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option *ngFor="let asignatura of asignaturas" value="{{asignatura.value}}">
                         {{ asignatura.label }}
@@ -29,7 +29,7 @@
 
             <div>
                 <label for="estado" class="block text-sm font-medium leading-6 text-gray-900">Estado</label>
-                <select id="estado" 
+                <select id="estado"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option *ngFor="let estado of estados" value="{{estado.value}}">
                         {{ estado.label }}
@@ -81,10 +81,12 @@
             <div class="col-span-4">
                 <label for="file" class="block text-sm font-medium leading-6 text-gray-900">Archivo/Imagen</label>
                 <div class="mt-2">
-                  <input type="file" id="file" (change)="onFileChange($event)" accept="image/*"
-                    class="block w-full text-gray-900">
+                    <input type="file" id="file" (change)="onFileChange($event)"
+                        accept=".jpg, .jpeg, .png, .gif, .doc, .docx, .pdf, .xls, .xlsx, .ppt, .pptx"
+                        class="block w-full text-gray-900">
                 </div>
-              </div>
+
+            </div>
 
             <div class="col-span-4 text-right">
                 <button type="button" (click)="cancelar()"
@@ -100,7 +102,7 @@
                     </span>
                 </button>
             </div>
-       </div>
+        </div>
     </form>
 </mat-dialog-content>
 
