--- a/src/app/academic-resources/components/resources-table/resources-table.component.html
+++ b/src/app/academic-resources/components/resources-table/resources-table.component.html
@@ -5,8 +5,10 @@
         <table class="min-w-full divide-y divide-gray-200">
           <thead>
             <tr>
-              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">ID
-                Recurso</th>
+              <th *ngIf="selectedTab ==='Mis Recursos'"
+                class=" px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Acciones
+              </th>
               <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                 Nombre Recurso</th>
               <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -23,7 +25,15 @@
           </thead>
           <tbody class="bg-white divide-y divide-gray-200">
             <tr *ngFor="let item of paginatedData">
-              <td class="px-6 py-4 whitespace-nowrap">{{ item.idRecurso }}</td>
+              <td class="px-6 py-4 whitespace-nowrap" *ngIf="selectedTab === 'Mis Recursos'">
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                  Editar
+                </button>
+                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
+                  (click)="eliminarRecurso(item.idRecurso)">
+                  Eliminar
+                </button>
+              </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.nombreRecurso }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.asignatura }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.nivel }}</td>
@@ -36,13 +46,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <div class="flex items-center justify-between p-8">
-    <button (click)="prevPage()" [disabled]="currentPage === 1"
-      class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Anterior</button>
-    <button (click)="nextPage()" [disabled]="currentPage === totalPages"
-      class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Siguiente</button>
-  </div> -->
 </div>
 
 <ng-template #noData>
