--- a/src/app/academic-resources/components/add-resource/add-resource.component.html
+++ b/src/app/academic-resources/components/add-resource/add-resource.component.html
@@ -54,7 +54,7 @@
                 </select>
             </div>
 
-            <div class="col-span-4">
+            <div class="col-span-4" *ngIf="isLink()">
                 <label for="link" class="block text-sm font-medium leading-6 text-gray-900">Link</label>
                 <input type="text" id="link" formControlName="link"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
@@ -78,7 +78,7 @@
                     <input id="dropzone-file" type="file" class="hidden" formControlName="recurso"/>
                 </label>
             </div> -->
-            <div class="col-span-4">
+            <div class="col-span-4" *ngIf="isFile()">
                 <label for="file" class="block text-sm font-medium leading-6 text-gray-900">Archivo/Imagen</label>
                 <div class="mt-2">
                     <input type="file" id="file" (change)="onFileChange($event)"
@@ -88,7 +88,7 @@
 
             </div>
 
-            <div class="col-span-4 text-right">
+            <div class="col-span-4 text-right mt-5 mb-5">
                 <button type="button" (click)="cancelar()"
                     class="text-white bg-gray-500 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
                     <span class="flex items-center justify-center">
