--- a/src/app/academic-resources/components/resources-table/resources-table.component.html
+++ b/src/app/academic-resources/components/resources-table/resources-table.component.html
@@ -5,6 +5,7 @@
         <table class="min-w-full divide-y divide-gray-200">
           <thead>
             <tr>
+              <th></th>
               <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">ID
                 Recurso</th>
               <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -23,12 +24,19 @@
           </thead>
           <tbody class="bg-white divide-y divide-gray-200">
             <tr *ngFor="let item of paginatedData">
+              <td class="px-6 py-4 whitespace-nowrap" >
+                <mat-icon class="text-red-600 mr-2" *ngIf="item.usuarioCreacion == usuario">delete</mat-icon>
+                <mat-icon class="text-blue-800 mr-2" *ngIf="item.usuarioCreacion == usuario">edit</mat-icon>
+                <mat-icon class="text-blue-800" *ngIf="item.usuarioCreacion == usuario">visibility</mat-icon>
+              </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.idRecurso }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.nombreRecurso }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.asignatura }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.nivel }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.fechaCreacion | date }}</td>
-              <td class="px-6 py-4 whitespace-nowrap">{{ item.tipoRecurso }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">
+                {{item.tipoRecurso}}
+              </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.usuarioCreacion }}</td>
             </tr>
           </tbody>
